Update doc and config